# ai-news-aggregator

./: README.md  main.py  pyproject.toml
app/: app_ui.py  config.py  main.py  runner.py  runner2.py  ui.py
app/agents/: digest_agent.py  email_agent.py  format_agent.py  profiles.py  score_agent.py  test.py
app/agents2/: cleaner_agent.py  email_agent.py  orchestrator.py  profile.py  score_agent.py  scraper_agent.py  summary_agent.py  text.txt
app/database/: config.py  connection.py  create_tables.py  models.py  repository.py
app/frontend/app/: page.tsx
app/frontend/lib/: api.ts
app/migrations/: env.py
app/models/: __init__.py  transcript.py
app/scrappers/: anthrophic_research_scraper.py  anthropic_news_scraper.py  general_scrapper.py  openai_scraper.py  save1.txt  youtube_scraper.py
app/services/: process_transcript.py
notebooks/: data_cleaner.ipynb  testing_genral_scrapper.ipynb  testing_yt_api.ipynb
output/: anthropic_gh_Anthropic Raises Series B to build st.md  anthropic_gh_Anthropic raises 124 million to build.md  anthropic_res_How AI Is Transforming Work at Anthr.md  anthropic_res_Introducing Anthropic Interviewer.md  openai_Bringing powerful AI to millions across Eur.md  openai_Instacart and OpenAI partner on AI shopping.md
