[project]
name = "the-final-cook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.124.0",
    "feedparser>=6.0.12",
    "html2text>=2025.4.15",
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "newspaper3k>=0.2.8",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.44",
    "unstructured>=0.18.21",
    "youtube-transcript-api>=1.2.3",
]
