[project]
name = "the-final-cook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.124.0",
    "feedparser>=6.0.12",
    "groq>=0.37.1",
    "html2text>=2025.4.15",
    "instructor>=1.13.0",
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.0",
    "markdown>=3.10",
    "newspaper3k>=0.2.8",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.44",
    "unstructured>=0.18.21",
    "youtube-transcript-api>=1.2.3",
    "ytfetcher>=1.4.1",
]
